# HaemoUpdate

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
src/haemo_update/: __init__.py  haemo_update.py  main.py
src/tests/: tests.py  tests.sh
